--- a/src/components/ui-components/referAndEarn/referAndEarn.css
+++ b/src/components/ui-components/referAndEarn/referAndEarn.css
@@ -1,5 +1,5 @@
 .banner_image_earn_background {
-  background-image: url("../../assets/img/banner_web_earn.png");
+  background-image: url("../../../assets/img/banner_web_earn.png");
   width: 100%;
   height: 100vh;
 }
