--- a/src/components/ui-components/category/Card.css
+++ b/src/components/ui-components/category/Card.css
@@ -40,11 +40,11 @@ img {
   background-color: white;
   padding: 0px 17px 30px 20px;
   left: 0px;
-  bottom: -50px !important;
+  bottom: -90;
   border-radius: 0px 0px 13px 13px;
   width: 100%;
   box-sizing: border-box;
-  box-sizing: 0px 0px 20px 0px black !important;
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.13);
 }
 .copy {
   position: fixed;
@@ -61,6 +61,12 @@ img {
 .card_text {
   padding: 10px;
   text-align: left;
+}
+.rate{
+  padding: 0px;
+  margin: 0px;
+  margin-top: 10px;
+
 }
 .rate span.current-rate {
   font-size: 1.3rem;
@@ -80,6 +86,7 @@ img {
   text-transform: capitalize;
   font-size: 1.1 rem;
   color: #f37cfa;
+  margin: 0px;
   font-family: "InterSemiBold", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 .about {
@@ -90,7 +97,9 @@ img {
   font-family: "InterRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   max-width: calc(100% - 50px);
   color: #9d9fa4;
-  margin-bottom: 14px;
+  margin-bottom: 10px;
+  padding: 0px;
+  margin: 0px;
   text-transform: capitalize;
 }
 .home_try {
@@ -110,21 +119,40 @@ img {
   border-radius: 13px;
   background: red;
   z-index: 2;
+  box-shadow: 0p;
+}
+.tried {
+  width: 70%;
+  box-sizing: border-box;
+  text-align: center;
+}
+.video{
+  width: 20%;
+  box-sizing: border-box;
+  text-align: center;
+  
 }
 .tried a {
-  font-size: 1rem;
+  font-size: 13px;
   text-transform: uppercase;
   color: #333;
-  padding: 10px 14px;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
   border: 1px solid #4e555e;
   border-radius: 15px;
+  display: inline-block;
 }
 .video a {
-  font-size: 1rem;
-  padding: 10px 15px;
+  font-size: 13px;
+  padding: 10px 14px;
+  box-sizing: border-box;
+  width: 100%;
+  text-align: center;
   border-radius: 15px;
-  border: 1px solid #4e555e;
+  border: 1px solid green;
   color: green;
+  display: inline-block;
 }
 .w-100 {
   width: 100%;
@@ -161,6 +189,12 @@ img {
   text-transform: capitalize;
   color: #333;
   margin-left: 20px;
+}
+.item_showen ul::-webkit-scrollbar {
+  display: none;
+}
+.types_main::-webkit-scrollbar{
+  display:none;
 }
 
 @media (max-with: 1264px) {
