--- a/src/components/ui-components/category/Cards.css
+++ b/src/components/ui-components/category/Cards.css
@@ -33,20 +33,24 @@ img {
   cursor: pointer;
   top: 0;
   border-radius: 13px;
-  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.13);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.13);
+}
+:root{
+  --maxHeight : 100% - 200px;
 }
 .card_wrap:hover .card_text {
-  position: absolute;
+  position: absolute; 
   background-color: white;
   padding: 0px 17px 30px 20px;
   left: 0px;
-  bottom: -90;
+  top: var(--maxHeight);
   border-radius: 0px 0px 13px 13px;
   width: 100%;
   box-sizing: border-box;
   box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.13);
+  transition: all .3s;
 }
-.copy {
+.copy{
   position: fixed;
   left: 10px;
   border: 10px;
@@ -60,7 +64,8 @@ img {
 }
 .card_text {
   padding: 10px;
-  text-align: left;
+  text-align: left; 
+  transition: all .3s;
 }
 .rate{
   padding: 0px;
@@ -102,12 +107,13 @@ img {
   margin: 0px;
   text-transform: capitalize;
 }
-.home_try {
+.card_text .home_try {
   justify-content: space-between;
   margin-top: 25px;
   display: none;
+  box-sizing: border-box;
 }
-.card_wrap:hover .home_try {
+.card_wrap:hover .card_text .home_try {
   display: flex;
 }
 .card_wrap::before {
@@ -119,7 +125,6 @@ img {
   border-radius: 13px;
   background: red;
   z-index: 2;
-  box-shadow: 0p;
 }
 .tried {
   width: 70%;
@@ -132,7 +137,7 @@ img {
   text-align: center;
   
 }
-.tried a {
+.home_try .tried a {
   font-size: 13px;
   text-transform: uppercase;
   color: #333;
@@ -143,7 +148,7 @@ img {
   border-radius: 15px;
   display: inline-block;
 }
-.video a {
+.home_try .video a {
   font-size: 13px;
   padding: 10px 14px;
   box-sizing: border-box;
@@ -197,24 +202,4 @@ img {
   display:none;
 }
 
-@media (max-with: 1264px) {
-  .card_wrap {
-    width: 33.3333%;
-  }
-  .wrapper_filter {
-    display: none;
-  }
-  .price_filter {
-    flex: 1;
-  }
-  .wrapper_product {
-    width: 100%;
-  }
-  .card_wrap {
-    max-width: 50%;
-    flex: 0.5;
-  }
-  .price_filter {
-    width: 100%;
-  }
-}
+
