--- a/src/components/ui-components/category/MobileFilter.css
+++ b/src/components/ui-components/category/MobileFilter.css
@@ -26,7 +26,7 @@
     .case_list{
         background: #f6f3f9;
         width: 50%  ;
-        height: 400px;
+        height: 74vh;
         overflow: auto;
     }
     .case_list li{
@@ -60,6 +60,7 @@
         display: flex;
         justify-content: start;
         background-color: #fff;
+        cursor: pointer;
         
     }
     .filterCase span{
@@ -93,5 +94,12 @@
         bottom: 0;
         left: 0;
         display: none;
+
+    }
+    .show{
+        display: block !important;
+    }
+    .remove{
+        display: none !important;
     }
 }
