--- a/src/components/ui-components/category/category.css
+++ b/src/components/ui-components/category/category.css
@@ -429,9 +429,12 @@
     border: 1px solid #ccc;
     color: #8863fb;
     border-radius: 13px;box-shadow: 0px 6px 10px #ccc;
+    transform: all .3s;
   }
-  .item_showen li a:hhover {
-    color: red;
+  .item_showen li a:hover {
+    color: white;
+    background: #8863fb;
+    transition: all .3s;
   }
   .main_item {
     width: 100%;
@@ -597,44 +600,6 @@
     width: 153px;
   }
   
-  @media (max-width: 977px) {
-    .f_list ul {
-      display: none;
-    }
-    .footer_blocks {
-      display: block;
-    }
-    .f_list {
-      border-bottom: 1px solid rgb(233, 233, 233);
-    }
-    .visa {
-      display: none;
-    }
-    .social_icon {
-      justify-content: center;
-      margin-top: 10px;
-    }
-    .app_store {
-      justify-content: center;
-    }
-    .store {
-      justify-content: center;
-    }
-    .add {
-      display: block;
-    }
-    h3.list_title {
-      display: flex;
-      justify-content: space-between;
-    }
-    .block {
-      display: block !important;
-    }
-    .s-media {
-      display: flex;
-    }
-    
-  }
     
   
   
