--- a/src/components/ui-components/referAndEarn/referAndEarn.css
+++ b/src/components/ui-components/referAndEarn/referAndEarn.css
@@ -1,18 +1,29 @@
-.banner_image_earn_background {
+.refer_and_earn {
+}
+
+.banner_image_earn_background1 {
   position: relative;
   padding-top: 45.4167%;
 }
-.banner_image_earn_background img {
+.banner_image_earn_background1 img {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
 }
-.refer_earn_card {
+.hide-lg {
+  display: block;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.hide-sm {
+  display: none !important;
+}
+.refer_earn_card1 {
   max-width: 416px;
   position: absolute;
   left: 10%;
-  top: 65%;
+  top: 67%;
   min-height: 416px;
   transform: translateY(-50%);
   margin-top: 0;
@@ -23,18 +34,18 @@
   border-radius: 24px;
   box-sizing: inherit;
 }
-.refer_earn_card h2 {
+.refer_earn_card1 h2 {
   font-family: "InterSemiBold", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 2.2rem;
   line-height: 36px;
   margin-bottom: 20px;
   font-weight: normal;
 }
-.refer_earn_card .intro {
+.refer_earn_card1 .intro {
   font-size: 22px;
   font-weight: 600;
 }
-.refer_earn_card .refer_heading {
+.refer_earn_card1 .refer_heading {
   background-image: linear-gradient(90deg, #e56eeb -13.59%, #8863fb 111.41%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -43,8 +54,9 @@
   display: block;
   line-height: 40px;
 }
-.refer_earn_card .refer_about {
+.refer_earn_card1 .refer_about {
   font-size: 18px;
+  text-align: start;
   line-height: 24px;
   font-family: "InterRegular", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #4f3267;
@@ -67,7 +79,7 @@
     background-repeat: no-repeat;
     background-position: cover;
   } */
-  .refer_earn_card {
+  .refer_earn_card1 {
     margin-top: -25px;
     min-height: 360px;
     position: relative;
@@ -79,13 +91,4 @@
     padding-left: 16px;
     padding-right: 16px;
   }
-  .hide-md {
-    display: none !important;
-  }
-  .banner_image_earn_background .hide-lg {
-    display: block !important;
-  }
-}
-.hide-lg {
-  display: none !important;
 }
