--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -81,6 +81,38 @@ li {
   font-size: 22px;
   color: #333;
 }
+.your-account{
+  width:335px;
+  padding: 12px;
+  box-shadow: rgb(219, 219, 219) 2px 2px 4px;
+  position: absolute;
+  top:21px;
+  right:-10px;
+  background-color: #ffffff;
+}
+.your-account h4{
+  font-size:24px;
+  font-family: emoji;
+  padding: 15px 0px;
+  color: rgb(79, 50, 103);
+  margin: 0px;
+}
+.your-account p{
+  color: gray;
+  padding: 10px 0px;
+  font-size: 14px;
+}
+.your-account button{
+  border: none;
+  background: linear-gradient(to right, rgb(222, 87, 229), rgb(136, 99, 251));
+  padding: 12px 25px 12px 25px;
+  margin: 10px;
+  border-radius: 10px;
+
+}
+.your-account button a{
+  color: rgb(255, 255, 255);
+}
 
 @media (max-width: 576px) {
   #navbarScroll {
