--- a/src/components/ui-components/GoldRate/GoldRate.css
+++ b/src/components/ui-components/GoldRate/GoldRate.css
@@ -29,18 +29,32 @@
     color: #231535;
     padding: 20px 20px; 
 }
+.determin-contant p{
+    font-size: 14px;
+    color: gray;
+}
 .explore-button{
     border: none;
-    background-color:#8863fb;
-    padding: 10px 20px;
+    background: linear-gradient(to right, rgb(222, 87, 229), rgb(136, 99, 251));
+    padding: 12px 50px;
+    border-radius: 12px;
+}
+.explore-button a{
+    color: #f6eff6;
 }
 .explore-prf{
     font-size: 14px;
     color: #231535;
+    padding: 20px 0px;
+    color: gray;
 }
 .pincode-text{
     display: flex;
     justify-content: space-between;
+}
+.pincode-text span{
+    color: gray;
+    font-size: 15px;
 }
 .innnnnn{
     display: flex;
@@ -48,6 +62,16 @@
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+.pincod-explore{
+    background-color: rgb(249, 249, 250);
+    margin: 75px 0px;
+}
+.pincode-contant input{
+    padding: 12px 7px;
+    border-radius: 12px;
+    border: none;
+    background-color:palegoldenrod;
 }
 .explore-image{
     width: 100%;
