--- a/src/components/ui-components/carriers/careerAbout/careerAbout.css
+++ b/src/components/ui-components/carriers/careerAbout/careerAbout.css
@@ -1,10 +1,11 @@
 .Carrier_feature_reads {
   background-color: rgb(245, 205, 156);
   width: 100%;
-  padding: 80px 0px;
+  padding: 80px 40px;
+  height: auto;
 }
 .Carrier_feature_content1 {
-  padding: 80px 0px 0px 0px;
+  padding-bottom: 20x;
 }
 .Carrier_feature_content1 h1 {
   font-size: 40px;
@@ -28,7 +29,7 @@
   width: 100%;
   line-height: 48px;
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 16px;
   font-family: "inter-semibold", sans-serif;
   color: #4f3267;
   border-radius: 12px;
@@ -49,4 +50,29 @@
   height: 300px;
   border-radius: 10px;
   /* margin: 40px; */
+}
+@media screen and (max-width: 992px) {
+  .Carrier_feature_content1 h1 {
+    font-size: 1.5rem !important;
+  }
+  .about_photo1 .image11 {
+    width: 286px;
+  }
+  .Carrier_feature_reads {
+    padding: 384px 0px 40px;
+  }
+  .Carrier_feature_content1 {
+    padding-bottom: 20px;
+  }
+  .Carrier_feature_content1 p {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 992px) {
+  .Carrier_feature_reads {
+    padding: 550px 0px 40px;
+  }
+  .about_photo1 div {
+    padding: 15px;
+  }
 }
