--- a/src/components/ui-components/referAndEarn/referAndEarn.css
+++ b/src/components/ui-components/referAndEarn/referAndEarn.css
@@ -30,7 +30,7 @@
   width: 100%;
   flex-direction: column;
   padding: 45px;
-  background-color: #fff;
+  background-color: #a58585;
   border-radius: 24px;
   box-sizing: inherit;
 }
