--- a/src/components/ui-components/15DayReturns/ReturnPolicy.css
+++ b/src/components/ui-components/15DayReturns/ReturnPolicy.css
@@ -147,11 +147,14 @@
   margin: 10px 0px;
 }
 
-@media (max-width: 965px) {
+@media (max-width: 992px) {
   .main_box {
-    max-width: 99%;
+    max-width: 99% !important;
   }
   .moneyexchange {
-    width: 99%;
+    width: 99% !important;
+  }
+  .term-condition-list li .header_title{
+    font-size: .8rem !important;
   }
 }
