--- a/src/components/ui-components/carriers/careerAbout/careerAbout.css
+++ b/src/components/ui-components/carriers/careerAbout/careerAbout.css
@@ -41,6 +41,7 @@
   display: flex;
   justify-content: center;
   margin: auto;
+  margin-bottom: 20px;
 }
 .about_photo1 {
   margin-top: 30px;
@@ -68,11 +69,15 @@
     width: 100%;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 576px) {
   .Carrier_feature_reads {
     padding: 550px 0px 40px;
   }
   .about_photo1 div {
     padding: 15px;
+  }
+  .about_photo1 .image11 {
+    height: 300px !important;
+    width: 300px !important;
   }
 }
