--- a/src/components/ui-components/carriers/careerFeature/careerFeature.css
+++ b/src/components/ui-components/carriers/careerFeature/careerFeature.css
@@ -72,20 +72,21 @@
   font-size: 25px;
   color: #4f3267;
   text-align: left;
-  padding: 0 20px 3px;
+  padding: 7px 0px 3px;
   /* font-size: 600; */
   margin-top: 15px;
 }
 .feature_sweaper_slide p {
   text-align: left;
   padding-right: 37px !important;
-  padding: 0 20px 20px;
+  padding: 0 0px 2px;
   width: 100%;
   line-height: 24px;
+  font-size: 18px !important;
 }
 .feature_sweaper_slide .circle {
-  bottom: 20%;
-  left: 88%;
+  bottom: 0%;
+  left: 83%;
   position: fixed;
   width: 35px;
   height: 35px;
@@ -131,8 +132,8 @@
     background-color: #fff3e7;
   }
   .feature_sweaper_slide img {
-    width: 100% !important;
-    height: 500px !important;
+    width: 92% !important;
+    height: 252px;
     border-radius: 20px;
     transition: none;
   }
@@ -156,8 +157,15 @@
     position: relative;
     bottom: 18px;
   }
+  .slick-arrow,
+  .slick-next {
+    display: none !important;
+  }
+  .featureSwiperSlideBtn {
+    margin-top: 70px;
+  }
 }
-@media (max-width: 992px) {
+@media (max-width: 576px) {
   .feat_container h2 {
     margin-bottom: 20px;
     font-weight: 600;
@@ -165,8 +173,15 @@
   .feature_sweaper_slide img {
     display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
     transition: transform 0.4s;
+  }
+  .featureSwiperSlideBtn {
+    margin-top: 0px;
+  }
+  .slick-arrow,
+  .slick-next {
+    display: none !important;
   }
 }
