--- a/src/components/ui-components/referAndEarn/inspirePeople/inspirePeople.css
+++ b/src/components/ui-components/referAndEarn/inspirePeople/inspirePeople.css
@@ -84,6 +84,6 @@
 }
 @media screen and (max-width: 992px) {
   .people_img_flex .img-box img {
-    margin-top: 20px;
+    margin-top: 20px !important;
   }
 }
