--- a/src/components/ui-components/productDetails/productDetails.css
+++ b/src/components/ui-components/productDetails/productDetails.css
@@ -91,8 +91,8 @@
   width: 80%;
 }
 .product_details_box {
-  width: 150px;
-  height: 130px;
+  width: 25% !important;
+  height: auto !important;
   border: 1px solid rgb(204, 197, 197);
   padding: 10px;
   border-radius: 10px;
@@ -103,13 +103,16 @@
 .product_details_box h6 {
   display: flex;
   align-items: center;
+  font-size: 14px;
+  letter-spacing: 0.5px;
+  font-weight: bold;
 }
 .product_details_box h6 span {
   padding-right: 5px;
 }
 .product_details_box1 {
   width: 90%;
-  height: 80%;
+  height: auto;
   border: 1px solid rgb(204, 197, 197);
   padding: 20px;
   border-radius: 10px;
